# trello-ai

./: .gitignore  README.md  db-initial-concept.excalidraw  pyproject.toml
.github/workflows/: backend-cd.yaml  backend-ci.yaml  frontend-cd.yaml  frontend-ci.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4baebc30cbb3_board_id_type.py  92d57787ba57_boards_and_tasks.py
backend/app/: main.py
backend/app/application/dtos/: __init__.py  board_dto.py  task_dto.py
backend/app/application/use_cases/: create_board.py  create_task.py  delete_board.py  delete_task.py  get_boards.py  task_suggestion.py  update_board.py  update_task.py
backend/app/config/: logging.py  middleware.py  settings.py  tasks_prompt.py
backend/app/core/: exceptions.py
backend/app/domain/models/: __init__.py  board.py  task.py
backend/app/domain/repositories/: board_repository.py  task_repository.py
backend/app/infrastructure/db/: base.py  database.py  models.py
backend/app/infrastructure/db/impl/: board_repository_impl.py  task_repository_impl.py
backend/app/presentation/: dependencies.py  handlers.py
backend/app/presentation/api/: boards.py  tasks.py
backend/app/presentation/schemas/: __init__.py  boards.py  tasks.py
backend/app/presentation/socket/: tasks.py  tasks_prompt.py
backend/app/tests/: conftest.py  test_boards.py  test_hello_actions.py  test_task.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: board-form.tsx  board-list.tsx  board.tsx  layout.tsx  page.tsx  providers.tsx  task-form.tsx
frontend/src/app/(public)/: chat-sheet.tsx  page.tsx  task-form.tsx
frontend/src/app/new/: page.tsx
frontend/src/components/board/: board-form.tsx  board-list.tsx  board.tsx  task-edit-dialog.tsx  task.tsx
frontend/src/components/layout/: navbar.tsx
frontend/src/components/ui/: board-form.tsx  board-list.tsx  board.tsx  button.tsx  form.tsx  task-form.tsx  task.tsx
frontend/src/services/: board.ts  task.ts
frontend/src/types/: index.ts
