[project]
name = "task-board"
version = "0.1.0"
description = "Trello clone with discord login and IA integration"
authors = [
    {name = "Luis Eduardo Soares"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
