[tool.poetry]
name = "task-board"
version = "0.1.0"
description = "Trello clone with discord login and IA integration"
authors = ["Luis Soares <luisedu.soares@outlook.com>"]
license = "MIT"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
alembic = "^1.16.4"
sqlalchemy = "^2.0.42"
snowflake-id = "^1.0.2"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
autopep8 = "^2.3.2"
pytest = "^8.4.1"
pytest-env = "^1.1.5"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"
aiosqlite = "^0.21.0"
taskipy = "^1.14.1"

[tool.pytest_env]
ENVIRONMENT = "TEST"

[tool.ruff]
target-version = "py311"

# https://coverage.readthedocs.io/en/latest/excluding.html
[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'log\.error\(',
    'log\.info\(',
    'log\.debug\(',
    'except Exception:\s*\n\s*pass',
    'except Exception:\s*\n\s*...',
]

[tool.taskipy.tasks]
run = "uvicorn app.main:app --port 8000 --reload --log-level debug"
pytest = 'pytest .'
ruff = "ruff check ./app --fix"
autorevision = "alembic revision --autogenerate -m 'autogenerated'"
auhead = "alembic upgrade head"
adbase = "alembic downgrade base"
